--- a/src/app/Components/users/users.component.html
+++ b/src/app/Components/users/users.component.html
@@ -13,7 +13,7 @@
   </thead>
   <tbody>
   <tr *ngFor="let user of users">
-    <td>{{ user.id }}</td>
+    <td><a routerLink="users/{{user.id}}">{{ user.id }}</a></td>
     <td>{{ user.name }}</td>
     <td>{{ user.phone }}</td>
     <td>{{ user.email }}</td>
@@ -24,6 +24,7 @@
       <button type="button" class="btn btn-info btn-sm mr-2" >Edit</button>
 
       <button type="button" class="btn btn-danger btn-sm" >Delete</button>
+
     </td>
   </tr>
   </tbody>
