--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@
   </div>
 </nav>
 
-<div class="mt-3 mb-3">
+<div class="mt-3">
   <a class="btn btn-primary pr-3 pl-3" routerLink="newuser">add users</a>
 
 </div>
